fix align products shop movil

--- a/src/app/components/shop/products-container/products-card/products-card.component.css
+++ b/src/app/components/shop/products-container/products-card/products-card.component.css
@@ -1,5 +1,5 @@
 .card {
-  width: 300px;
+  width: 375px;
   min-height: 440px;
   display: flex;
   justify-content: space-between;
